Refactor UI and improve camera controls

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-<title>3D Bikini Simulator</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<title>3D Model Viewer</title>
 
 <style>
 html, body {
@@ -11,7 +11,7 @@ html, body {
   padding: 0;
   overflow: hidden;
   background: #111;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: system-ui, -apple-system, sans-serif;
 }
 
 #ui {
@@ -19,7 +19,7 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.85);
   padding: 10px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -38,21 +38,16 @@ label {
   flex-direction: column;
 }
 
-input[type=range], select {
+input, select, button {
   width: 100%;
 }
 
 button {
   padding: 8px;
-  background: #444;
+  background: #333;
   color: #fff;
   border: none;
   border-radius: 6px;
-}
-
-#closeUI {
-  grid-column: span 2;
-  background: #222;
 }
 
 #openUI {
@@ -60,10 +55,7 @@ button {
   bottom: 15px;
   right: 15px;
   padding: 10px 14px;
-  background: rgba(0,0,0,0.7);
-  color: #fff;
   border-radius: 20px;
-  border: none;
   display: none;
 }
 </style>
@@ -72,19 +64,6 @@ button {
 <body>
 
 <div id="ui">
-  <label>Chest
-    <input id="chest" type="range" min="0.9" max="1.2" step="0.01" value="1">
-  </label>
-  <label>Hips
-    <input id="hips" type="range" min="0.9" max="1.25" step="0.01" value="1">
-  </label>
-  <label>Waist
-    <input id="waist" type="range" min="0.85" max="1.1" step="0.01" value="1">
-  </label>
-  <label>Shoulders
-    <input id="shoulders" type="range" min="0.9" max="1.15" step="0.01" value="1">
-  </label>
-
   <label>Skin
     <select id="skin">
       <option value="dry">Dry</option>
@@ -101,27 +80,18 @@ button {
     </select>
   </label>
 
-  <button id="reset">Reset View</button>
-  <button id="closeUI">Close Customization</button>
+  <button id="reset">Reset Camera</button>
+  <button id="closeUI">Close</button>
 </div>
 
 <button id="openUI">Customize</button>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.158/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158/examples/js/loaders/GLTFLoader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158/examples/js/controls/OrbitControls.js"></script>
 
 <script>
-let scene, camera, renderer, model;
-let isDragging = false;
-let lastX = 0;
-let rotationVelocity = 0;
-
-const bodyGroups = {
-  chest: [],
-  waist: [],
-  hips: [],
-  shoulders: []
-};
+let scene, camera, renderer, controls, model;
 
 init();
 animate();
@@ -130,7 +100,12 @@ function init() {
   scene = new THREE.Scene();
   scene.background = new THREE.Color(0x111111);
 
-  camera = new THREE.PerspectiveCamera(35, window.innerWidth/window.innerHeight, 0.1, 100);
+  camera = new THREE.PerspectiveCamera(
+    35,
+    window.innerWidth / window.innerHeight,
+    0.1,
+    100
+  );
   camera.position.set(0, 1.5, 3);
 
   renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -138,81 +113,49 @@ function init() {
   renderer.setPixelRatio(window.devicePixelRatio);
   document.body.appendChild(renderer.domElement);
 
+  // TOUCH CAMERA CONTROLS (THIS FIXES ROTATION)
+  controls = new THREE.OrbitControls(camera, renderer.domElement);
+  controls.enableDamping = true;
+  controls.dampingFactor = 0.08;
+  controls.enableZoom = true;
+  controls.enablePan = false;
+  controls.target.set(0, 1.2, 0);
+
+  // LIGHTING (prevents black model)
   scene.add(new THREE.HemisphereLight(0xffffff, 0x444444, 1));
 
   const dir = new THREE.DirectionalLight(0xffffff, 0.8);
   dir.position.set(2, 3, 4);
   scene.add(dir);
 
+  // LOAD MODEL
   const loader = new THREE.GLTFLoader();
-  loader.load("female.glb", gltf => {
-    model = gltf.scene;
-    model.position.y = -1;
-    scene.add(model);
+  loader.load(
+    "female.glb",
+    gltf => {
+      model = gltf.scene;
+      model.position.y = -1;
+      scene.add(model);
 
-    model.traverse(obj => {
-      if (obj.isMesh) {
-        obj.material.roughness = 0.4;
-        obj.material.metalness = 0.05;
-
-        const n = obj.name.toLowerCase();
-        if (n.includes("chest") || n.includes("bust")) bodyGroups.chest.push(obj);
-        if (n.includes("waist") || n.includes("abdomen")) bodyGroups.waist.push(obj);
-        if (n.includes("hip") || n.includes("pelvis")) bodyGroups.hips.push(obj);
-        if (n.includes("shoulder") || n.includes("clavicle")) bodyGroups.shoulders.push(obj);
-      }
-    });
-  });
+      model.traverse(obj => {
+        if (obj.isMesh && obj.material) {
+          obj.material.roughness = 0.4;
+          obj.material.metalness = 0.05;
+        }
+      });
+    },
+    undefined,
+    err => {
+      console.error("MODEL LOAD ERROR:", err);
+      alert("female.glb not found or failed to load");
+    }
+  );
 
   window.addEventListener("resize", onResize);
-
-  renderer.domElement.addEventListener("pointerdown", e => {
-    isDragging = true;
-    lastX = e.clientX;
-  });
-
-  window.addEventListener("pointerup", () => isDragging = false);
-
-  window.addEventListener("pointermove", e => {
-    if (!isDragging || !model) return;
-    const dx = e.clientX - lastX;
-    lastX = e.clientX;
-    rotationVelocity = dx * 0.002;
-    model.rotation.y += rotationVelocity;
-  });
-
   setupUI();
 }
 
 function setupUI() {
-  ["chest","waist","hips","shoulders"].forEach(part => {
-    document.getElementById(part).oninput = e => {
-      bodyGroups[part].forEach(m => {
-        m.scale.x = e.target.value;
-        m.scale.z = e.target.value;
-      });
-    };
-  });
-
-  document.getElementById("skin").onchange = e => {
-    if (!model) return;
-    model.traverse(obj => {
-      if (!obj.isMesh) return;
-      obj.material.roughness =
-        e.target.value === "dry" ? 0.6 :
-        e.target.value === "smooth" ? 0.4 :
-        e.target.value === "oily" ? 0.25 : 0.15;
-    });
-  };
-
-  document.getElementById("perf").onchange = e => {
-    renderer.setPixelRatio(e.target.value === "low" ? 1 : window.devicePixelRatio);
-  };
-
-  document.getElementById("reset").onclick = () => {
-    if (model) model.rotation.y = 0;
-  };
-
   const ui = document.getElementById("ui");
   const openBtn = document.getElementById("openUI");
 
@@ -225,14 +168,35 @@ function setupUI() {
     ui.classList.remove("hidden");
     openBtn.style.display = "none";
   };
+
+  document.getElementById("reset").onclick = () => {
+    camera.position.set(0, 1.5, 3);
+    controls.target.set(0, 1.2, 0);
+    controls.update();
+  };
+
+  document.getElementById("skin").onchange = e => {
+    if (!model) return;
+    const r =
+      e.target.value === "dry" ? 0.6 :
+      e.target.value === "smooth" ? 0.4 :
+      e.target.value === "oily" ? 0.25 : 0.15;
+
+    model.traverse(o => {
+      if (o.isMesh) o.material.roughness = r;
+    });
+  };
+
+  document.getElementById("perf").onchange = e => {
+    renderer.setPixelRatio(
+      e.target.value === "low" ? 1 : window.devicePixelRatio
+    );
+  };
 }
 
 function animate() {
   requestAnimationFrame(animate);
-  if (model) {
-    rotationVelocity *= 0.92;
-    model.rotation.y += rotationVelocity;
-  }
+  controls.update();
   renderer.render(scene, camera);
 }
 
@@ -242,5 +206,6 @@ function onResize() {
   renderer.setSize(window.innerWidth, window.innerHeight);
 }
 </script>
+
 </body>
 </html>
